fix: Manual hide for Hana Key & Hyeon-a Store, Revert filter logic

--- a/admin_pov.html
+++ b/admin_pov.html
@@ -306,6 +306,7 @@
             });
 
             // Filter 3 Wins + Sort by distance (desc)
+            // Filter 3 Wins + Sort by distance (desc)
             const list = Object.values(mapObj)
                 .filter(s => s.wins === 3 && !s.hidden) // Filter hidden
                 .map(s => {
