Feature: Register Batch 10 POVs (9 shops in Changwon, Gwangyang, Suncheon)

--- a/index.html
+++ b/index.html
@@ -2229,7 +2229,7 @@
             <div class="section">
                 <span class="section-title">🏪 운영 상태 (Status)</span>
                 <div class="checkbox-group">
-                    <label class="checkbox-item"><input type="checkbox" id="excludeClosed"> 🚫 폐업점 제외</label>
+                    <label class="checkbox-item"><input type="checkbox" id="excludeClosed" checked> 🚫 폐업점 제외</label>
                 </div>
             </div>
             <div class="stats-card">
@@ -2634,6 +2634,28 @@
 
         // Premium Roadview POV Presets (User Verified 260210)
         const ROADVIEW_PRESETS = [
+            { name: "부강 돈벼락", addr: "경남 양산시 물금로 41", panoId: 1204485832, pov: { pan: 41.35, tilt: 3.80, zoom: 2 } },
+            { name: "송도하우스", addr: "전남 목포시 영산로 525 목포터미널 내", panoId: 1192393715, pov: { pan: 292.18, tilt: 3.38, zoom: -3 } },
+            { name: "가자복권천국", addr: "전남 목포시 상동 878-4", panoId: 1192597080, pov: { pan: 53.56, tilt: 5.29, zoom: -1 } },
+            { name: "대풍로또판매점", addr: "경남 김해시 번화2로 36", panoId: 1194232894, pov: { pan: 241.96, tilt: -0.98, zoom: -3 } },
+            { name: "대박상사", addr: "경남 창원시 진해구 충장로 88 (석동)", panoId: 1204704456, pov: { pan: 4.5, tilt: 5.7, zoom: 0 } },
+            { name: "구포라인점", addr: "부산 북구 구포동 700-148", panoId: 1202526432, pov: { pan: 255.82, tilt: 3.43, zoom: 1 } },
+            { name: "영화복권", addr: "경남 창원시 진해구 안청남로 14", panoId: 1204354980, pov: { pan: 175.08, tilt: 0.44, zoom: 1 } },
+            { name: "로또구포점", addr: "부산 북구 덕천2길 23-3", panoId: 1202240178, pov: { pan: 2.70, tilt: 1.64, zoom: -3 } },
+            { name: "큐마트학동점로또", addr: "전남 여수시 학동서5길 2 큐마트내", panoId: 1131607851, pov: { pan: 298.29, tilt: -8.06, zoom: 0 } },
+            { name: "씨스페이스(범어사역점)", addr: "부산 금정구 남산동 21-4", panoId: 1202570280, pov: { pan: 268.49, tilt: 3.29, zoom: 1 } },
+            { name: "우리로또복권방", addr: "전남 여수시 무선중앙로 71", panoId: 1205657400, pov: { pan: 358.65, tilt: 8.13, zoom: 1 } },
+            { name: "천하복권방", addr: "울산 동구 전하로 29", panoId: 1202146730, pov: { pan: 219.93, tilt: -1.81, zoom: -3 } },
+            { name: "일레븐마트무선점", addr: "전남 여수시 성산로 19", panoId: 1205608266, pov: { pan: 327.53, tilt: -3.95, zoom: -3 } },
+            { name: "복터진날", addr: "부산 사하구 장림로 162-1 복권판매점", panoId: 1202461118, pov: { pan: 131.58, tilt: 3.84, zoom: -1 } },
+            { name: "대구연쇄점", addr: "부산 부산진구 중앙대로783번길 8", panoId: 1202521545, pov: { pan: 58.86, tilt: -0.64, zoom: 2 } },
+            { name: "동일통신", addr: "부산 해운대구 반여1동 1361-2", panoId: 1202252207, pov: { pan: 80.63, tilt: -0.40, zoom: 0 } },
+            { name: "싱글벙글 6/45", addr: "부산 연제구 연산동 1330-10 좌측 싱글벙글복권방", panoId: 1202572760, pov: { pan: 324.08, tilt: -3.02, zoom: 1 } },
+            { name: "동명로또", addr: "부산 사상구 사상로 90 국제금고 사무용가구", panoId: 1202163254, pov: { pan: 45.53, tilt: -4.50, zoom: 0 } },
+            { name: "돼지복권명당", addr: "부산 기장군 해맞이로 365-1", panoId: 1201909624, pov: { pan: 331.26, tilt: -0.49, zoom: 0 } },
+            { name: "나이스로또복권", addr: "전남 여수시 이순신광장로 210", panoId: 1164703398, pov: { pan: 101.56, tilt: -8.26, zoom: 0 } },
+            { name: "금진슈퍼", addr: "전남 여수시 좌수영로 11", panoId: 1205274554, pov: { pan: 272.72, tilt: 4.27, zoom: 0 } },
+            { name: "로또판매점(바이더웨이)", addr: "부산 금정구 구서동 415-2 세븐일레븐내", panoId: 1202567242, pov: { pan: 280.79, tilt: 1.67, zoom: -3 } },
             // User Request: Sejin Electronics (Daegu)
             { name: "세진전자통신", addr: "대구 서구 서대구로", panoId: 1201585664, pov: { pan: 93.03, tilt: 5.09, zoom: -3 } },
             { name: "세방매점", addr: "경북 경주시 산업로", panoId: 1165999460, pov: { pan: 281.43, tilt: 6.82, zoom: -1 } },
@@ -2826,6 +2848,16 @@
             { name: "대전우표사", addr: "대전 동구 중앙로204번길", panoId: 1163576030, pov: { pan: 55.45, tilt: 1.93, zoom: -3 } },
             { name: "주택복권방", addr: "경기 용인시 수지구", panoId: 1199750326, pov: { pan: 141.11, tilt: 3.85, zoom: 1 } },
             { name: "미나식품(로또판매점)", addr: "서울 강서구 금낭화로", panoId: 1198192808, pov: { pan: 323.87, tilt: -2.11, zoom: -3 } },
+            // User Request: Batch 10 (260217)
+            { name: "Goodday복권전문점", addr: "경남 창원시 성산구 반지동 82-16", panoId: 1204230685, pov: { pan: 313.55, tilt: 4.31, zoom: -3 } },
+            { name: "완월로또", addr: "경남 창원시 마산합포구 고운로 175 한미초록빌라 세븐일레븐 내", panoId: 1204767224, pov: { pan: 324.20, tilt: 9.81, zoom: -1 } },
+            { name: "채널큐", addr: "경남 창원시 마산합포구 산호남로 11-1", panoId: 1204699861, pov: { pan: 32.90, tilt: 3.33, zoom: -3 } },
+            { name: "해피복권", addr: "경남 창원시 마산회원구 양덕동 17-3 양덕편의점 내", panoId: 1204617908, pov: { pan: 57.36, tilt: -8.23, zoom: -3 } },
+            { name: "도소매복권방", addr: "전남 광양시 광영동 759-4", panoId: 1205328607, pov: { pan: 127.71, tilt: 4.93, zoom: -2 } },
+            { name: "천하명당(팔용점)", addr: "경남 창원시 의창구 사화로 26", panoId: 1205179331, pov: { pan: 29.83, tilt: 0.95, zoom: -1 } },
+            { name: "복권나라동성점", addr: "전남 순천시 연향번영길 94 동성아파트 상가113호", panoId: 1205415089, pov: { pan: 93.17, tilt: -3.98, zoom: -2 } },
+            { name: "알짜마트왕지점", addr: "전남 순천시 왕궁길 60 중흥파크상가 309-101호", panoId: 1205227059, pov: { pan: 66.59, tilt: 8.26, zoom: -2 } },
+            { name: "제철로또대리점", addr: "전남 광양시 광장로 125 시티프라자A동116호", panoId: 1205201774, pov: { pan: 172.43, tilt: -1.62, zoom: 3 } },
             { name: "나눔로또봉평점", addr: "경남 통영시 도남로 81", panoId: 1204285725, pov: { pan: 15.6, tilt: 2.0, zoom: -1 } },
             { name: "천하명당", addr: "경기 시흥시 신천3길", panoId: 1175741916, pov: { pan: 335.65, tilt: 6.06, zoom: -2 } },
             { name: "로터리복권방", addr: "부산 서구 자갈치로 4-1 1층", panoId: 1202119889, pov: { pan: 175.81, tilt: 2.55, zoom: -1 } },
@@ -3002,7 +3034,7 @@
             { name: "명당마트", addr: "서울 강서구 양천로 91", panoId: 1198194653, pov: { pan: 70.47, tilt: -2.31, zoom: -3 } },
             { name: "명신사", addr: "서울 마포구 월드컵로 97", panoId: 1197543347, pov: { pan: 225.25, tilt: 6.55, zoom: -3 } },
             { name: "명진슈퍼", addr: "경기 의왕시 고천동 295-26", panoId: 1174117026, pov: { pan: 262.24, tilt: 5.16, zoom: -3 } },
-            { name: "매물도복권점", addr: "경남 통영시 통영해안로 225-1 (서호동 177-336)", panoId: 1204407783, pov: { pan: 347.4, tilt: 5.4, zoom: 4 }, customMessage: "기존 '바다로또방(1등 3회)'의 당첨 기운을 이어받아 통합 운영 중인 명당입니다." },
+            { name: "매물도복권점", addr: "경남 통영시 통영해안로 225-1", panoId: 1204407778, pov: { pan: 20.49, tilt: 1.12, zoom: 2 }, customMessage: "기존 바다로또방(3회) 및 명당방(1200회)을 포함하여 총 5회의 1등 당첨을 기록 중인 대박 명당입니다." },
             { name: "버스매표소", addr: "인천 부평구 부평대로 3 (부평동 549-39)", panoId: 1199209059, pov: { pan: 329.47, tilt: 1.58, zoom: -3 }, customMessage: "부평역 광장 가판대로 역사적인 당첨 기록을 보유한 명당입니다." },
             { name: "버스표판매소", addr: "경기 고양시 덕양구 화신로 76 샘터마을1단지 가판", panoId: 1203599815, pov: { pan: 212.0, tilt: 4.9, zoom: 0 }, customMessage: "행신동 샘터마을1단지 앞 가판대 명당입니다." },
             { name: "베스토아(용전2호)", addr: "대전 동구 동서대로 1689 복합터미널서관1층59호 (용전동 63-3)", panoId: 1201601961, pov: { pan: 248.2, tilt: 1.6, zoom: 0 }, customMessage: "동행복권 기록상 도로명/지번 주소 분산으로 인해 3+4회로 나뉘어 있던 총 7회 당첨의 전설적인 명당입니다." },
@@ -3184,6 +3216,8 @@
             { name: "가로판매점", addr: "서울 금천구 시흥대로 480 가판", panoId: 1198112467, pov: { pan: 47.89, tilt: 1.89, zoom: 2 } },
             { name: "포시즌마전점", addr: "인천 서구 완정로10번길", panoId: 1199590585, pov: { pan: 103.21, tilt: 1.73, zoom: -3 } },
             { name: "로또판매점", addr: "경기 고양시 일산동구", panoId: 1203808276, pov: { pan: 156.30, tilt: 1.44, zoom: -1 }, customMessage: "건물 내부에 매장이 있습니다" },
+            { name: "로또판매업", addr: "경남 양산시 북정로 31 CU편의점 내", panoId: 1204827358, pov: { pan: 1.6, tilt: 0.15, zoom: -2 } },
+            { name: "셀피아", addr: "울산 북구 무룡로 29 울산광역시 북구 연암동 417-1", panoId: 1202529349, pov: { pan: 83.97, tilt: 14.92, zoom: -3 } },
         ];
 
 
