Feature: Register '옥좌로또점' POV (Gyeongju)

--- a/index.html
+++ b/index.html
@@ -2849,6 +2849,7 @@
             { name: "주택복권방", addr: "경기 용인시 수지구", panoId: 1199750326, pov: { pan: 141.11, tilt: 3.85, zoom: 1 } },
             { name: "미나식품(로또판매점)", addr: "서울 강서구 금낭화로", panoId: 1198192808, pov: { pan: 323.87, tilt: -2.11, zoom: -3 } },
             // User Request: Batch 10 (260217)
+            { name: "옥좌로또점", addr: "경북 경주시 내외로 10 좌측4번째상가", panoId: 1187799279, pov: { pan: 322.70, tilt: 3.52, zoom: 3 } },
             { name: "Goodday복권전문점", addr: "경남 창원시 성산구 반지동 82-16", panoId: 1204230685, pov: { pan: 313.55, tilt: 4.31, zoom: -3 } },
             { name: "완월로또", addr: "경남 창원시 마산합포구 고운로 175 한미초록빌라 세븐일레븐 내", panoId: 1204767224, pov: { pan: 324.20, tilt: 9.81, zoom: -1 } },
             { name: "채널큐", addr: "경남 창원시 마산합포구 산호남로 11-1", panoId: 1204699861, pov: { pan: 32.90, tilt: 3.33, zoom: -3 } },
