Feature: Register Batch 12 POVs (3 New, 3 Updates)

--- a/index.html
+++ b/index.html
@@ -2851,10 +2851,14 @@
             // User Request: Batch 10 (260217)
             { name: "옥좌로또점", addr: "경북 경주시 내외로 10 좌측4번째상가", panoId: 1187799279, pov: { pan: 322.70, tilt: 3.52, zoom: 3 } },
             // User Request: Batch 11 (260217)
-            { name: "해피복권방", addr: "경기 고양시 일산동구 성석동 1246-80", panoId: 1203594365, pov: { pan: 93.22, tilt: 4.78, zoom: 2 } },
-            { name: "알뜰슈퍼", addr: "경기 동두천시 평화로 2436-1 4/6", panoId: 1192812778, pov: { pan: 83.08, tilt: 7.25, zoom: 3 } },
-            { name: "다음정보텔레콤(훼미리마트내)", addr: "경남 진주시 평거동 200-1 CU편의점 내", panoId: 1192980927, pov: { pan: 208.90, tilt: 4.53, zoom: 0 } },
+            { name: "해피복권방", addr: "경기 고양시 일산동구 성석동 1246-80", panoId: 1203594365, pov: { pan: 98.22, tilt: 3.97, zoom: 2 } },
+            { name: "알뜰슈퍼", addr: "경기 동두천시 평화로 2436-1 4/6", panoId: 1192812778, pov: { pan: 99.76, tilt: 2.31, zoom: 2 } },
+            { name: "다음정보텔레콤(훼미리마트내)", addr: "경남 진주시 평거동 200-1 CU편의점 내", panoId: 1192979349, pov: { pan: 224.21, tilt: 0.11, zoom: 2 } },
             { name: "공단로또점", addr: "경남 함안군 삼칠로 831 슈퍼 옆", panoId: 1191986142, pov: { pan: 227.22, tilt: 2.08, zoom: 3 } },
+            // User Request: Batch 12 (New)
+            { name: "CU노서점", addr: "경북 경주시 금성로259번길 38 1층 CU 노서점 내", panoId: 1187221443, pov: { pan: 45.67, tilt: 3.22, zoom: -1 } },
+            { name: "로또복권 황성점", addr: "경북 경주시 황성동 472-8 4호", panoId: 1187151971, pov: { pan: 316.37, tilt: 6.20, zoom: -3 } },
+            { name: "영화유통", addr: "경북 포항시 북구 양학천로 15", panoId: 1187457532, pov: { pan: 30.96, tilt: -3.64, zoom: 1 } },
 
             { name: "Goodday복권전문점", addr: "경남 창원시 성산구 반지동 82-16", panoId: 1204230685, pov: { pan: 313.55, tilt: 4.31, zoom: -3 } },
             { name: "완월로또", addr: "경남 창원시 마산합포구 고운로 175 한미초록빌라 세븐일레븐 내", panoId: 1204767224, pov: { pan: 324.20, tilt: 9.81, zoom: -1 } },
