Feature: Register Batch 13 POVs & Apply Marker Consolidation

--- a/index.html
+++ b/index.html
@@ -2859,6 +2859,11 @@
             { name: "CU노서점", addr: "경북 경주시 금성로259번길 38 1층 CU 노서점 내", panoId: 1187221443, pov: { pan: 45.67, tilt: 3.22, zoom: -1 } },
             { name: "로또복권 황성점", addr: "경북 경주시 황성동 472-8 4호", panoId: 1187151971, pov: { pan: 316.37, tilt: 6.20, zoom: -3 } },
             { name: "영화유통", addr: "경북 포항시 북구 양학천로 15", panoId: 1187457532, pov: { pan: 30.96, tilt: -3.64, zoom: 1 } },
+            // User Request: Batch 13 (260217)
+            { name: "대야지복권", addr: "광주 남구 주월동 961-24번지", panoId: 1200569355, pov: { pan: 341.43, tilt: 4.40, zoom: -1 } },
+            { name: "동원슈퍼", addr: "광주 남구 월산5동 1053-22", panoId: 1200403334, pov: { pan: 234.03, tilt: -0.89, zoom: -1 } },
+            { name: "빛고을로또", addr: "광주 광산구 소촌로 147 세븐일레븐", panoId: 1200047805, pov: { pan: 251.34, tilt: -0.94, zoom: -1 } },
+            { name: "1등로또방", addr: "광주 동구 중앙로 249-2", panoId: 1200326817, pov: { pan: 313.12, tilt: 6.55, zoom: -1 } },
 
             { name: "Goodday복권전문점", addr: "경남 창원시 성산구 반지동 82-16", panoId: 1204230685, pov: { pan: 313.55, tilt: 4.31, zoom: -3 } },
             { name: "완월로또", addr: "경남 창원시 마산합포구 고운로 175 한미초록빌라 세븐일레븐 내", panoId: 1204767224, pov: { pan: 324.20, tilt: 9.81, zoom: -1 } },
