Feature: Register '영화복권(버들점)' POV (Batch 14)

--- a/index.html
+++ b/index.html
@@ -2864,6 +2864,8 @@
             { name: "동원슈퍼", addr: "광주 남구 월산5동 1053-22", panoId: 1200403334, pov: { pan: 234.03, tilt: -0.89, zoom: -1 } },
             { name: "빛고을로또", addr: "광주 광산구 소촌로 147 세븐일레븐", panoId: 1200047805, pov: { pan: 251.34, tilt: -0.94, zoom: -1 } },
             { name: "1등로또방", addr: "광주 동구 중앙로 249-2", panoId: 1200326817, pov: { pan: 313.12, tilt: 6.55, zoom: -1 } },
+            // User Request: Batch 14 (260217)
+            { name: "영화복권(버들점)", addr: "광주 서구 상무버들로 32", panoId: 1200303825, pov: { pan: 3.39, tilt: 4.75, zoom: 1 } },
 
             { name: "Goodday복권전문점", addr: "경남 창원시 성산구 반지동 82-16", panoId: 1204230685, pov: { pan: 313.55, tilt: 4.31, zoom: -3 } },
             { name: "완월로또", addr: "경남 창원시 마산합포구 고운로 175 한미초록빌라 세븐일레븐 내", panoId: 1204767224, pov: { pan: 324.20, tilt: 9.81, zoom: -1 } },
