--- a/index.html
+++ b/index.html
@@ -2866,6 +2866,37 @@
             { name: "1등로또방", addr: "광주 동구 중앙로 249-2", panoId: 1200326817, pov: { pan: 313.12, tilt: 6.55, zoom: -1 } },
             // User Request: Batch 14 (260217)
             { name: "영화복권(버들점)", addr: "광주 서구 상무버들로 32", panoId: 1200303825, pov: { pan: 3.39, tilt: 4.75, zoom: 1 } },
+            // User Request: Batch 15 (260217)
+            { name: "타운복권방", addr: "광주 북구 밤실로 184-1", panoId: 1200747212, pov: { pan: 57.83, tilt: -0.92, zoom: -3 } },
+            { name: "세븐일레븐동천점", addr: "광주 서구 동천동 600 세븐일레븐 동천점 내", panoId: 1200054546, pov: { pan: 75.76, tilt: -2.70, zoom: 2 } },
+            { name: "천국열쇠", addr: "광주 북구 운암동 1040-10", panoId: 1200807885, pov: { pan: 225.62, tilt: -0.26, zoom: 0 } },
+            { name: "백송마트", addr: "광주 광산구 월계로 110 104호", panoId: 1200002434, pov: { pan: 197.60, tilt: 4.41, zoom: -1 } },
+            // User Request: Batch 16 (260217)
+            { name: "베스트원", addr: "전남 영광군 영광읍 남천리 315 CU편의점", panoId: 1192687174, pov: { pan: 329.07, tilt: -1.13, zoom: -1 } },
+            { name: "춘향로또", addr: "전북 남원시 동림로 102-1", panoId: 1205554323, pov: { pan: 43.12, tilt: 4.30, zoom: -1 } },
+            { name: "복권판매소(서문큰장네거리)", addr: "대구 서구 국채보상로 438", panoId: 1201562075, pov: { pan: 211.45, tilt: -3.22, zoom: -3 } },
+            { name: "청구마트", addr: "대구 북구 검단로 34 청구아파트상가108동102호", panoId: 1034649551, pov: { pan: 68.72, tilt: -0.84, zoom: -3 } },
+            { name: "월드복권", addr: "대구 서구 북비산로 98", panoId: 1201401917, pov: { pan: 182.02, tilt: 1.13, zoom: -2 } },
+            { name: "대흥당", addr: "전북 정읍시 관통로 102", panoId: 1183542559, pov: { pan: 331.55, tilt: -2.95, zoom: 1 } },
+            { name: "광포로또복권", addr: "경북 울진군 죽변북로 154", panoId: 1186537308, pov: { pan: 76.85, tilt: 1.39, zoom: 2 } },
+            { name: "로또복권애니타임점", addr: "경북 구미시 인동중앙로11길 24 애니타임편의점 내", panoId: 1166104869, pov: { pan: 358.26, tilt: 8.89, zoom: -1 } },
+            { name: "스타마트", addr: "경북 구미시 임은길 15", panoId: 1165804529, pov: { pan: 315.05, tilt: 4.10, zoom: -1 } },
+            { name: "로또복권4공단점", addr: "경북 구미시 첨단기업1로 18", panoId: 1166471935, pov: { pan: 125.32, tilt: 8.74, zoom: -1 } },
+            { name: "GMART", addr: "경북 구미시 구미중앙로 57-3", panoId: 1165801425, pov: { pan: 23.31, tilt: -1.02, zoom: 0 } },
+            { name: "로또로복권", addr: "전북 전주시 완산구 모악로 4729", panoId: 1172287937, pov: { pan: 304.48, tilt: 1.34, zoom: 0 } },
+            // User Request: Batch 16 (260217)
+            { name: "베스트원", addr: "전남 영광군 영광읍 남천리 315 CU편의점", panoId: 1192687174, pov: { pan: 275.17, tilt: -4.79, zoom: 1 } },
+            { name: "춘향로또", addr: "전북 남원시 동림로 102-1", panoId: 1205554323, pov: { pan: 43.12, tilt: 4.30, zoom: -1 } },
+            { name: "복권판매소(서문큰장네거리)", addr: "대구 서구 국채보상로 438", panoId: 1201562075, pov: { pan: 211.45, tilt: -3.22, zoom: -3 } },
+            { name: "청구마트", addr: "대구 북구 검단로 34 청구아파트상가108동102호", panoId: 1034649551, pov: { pan: 68.72, tilt: -0.84, zoom: -3 } },
+            { name: "월드복권", addr: "대구 서구 북비산로 98", panoId: 1201401917, pov: { pan: 182.02, tilt: 1.13, zoom: -2 } },
+            { name: "대흥당", addr: "전북 정읍시 관통로 102", panoId: 1183542559, pov: { pan: 331.55, tilt: -2.95, zoom: 1 } },
+            { name: "광포로또복권", addr: "경북 울진군 죽변북로 154", panoId: 1186537308, pov: { pan: 76.85, tilt: 1.39, zoom: 2 } },
+            { name: "로또복권애니타임점", addr: "경북 구미시 인동중앙로11길 24 애니타임편의점 내", panoId: 1166104869, pov: { pan: 358.26, tilt: 8.89, zoom: -1 } },
+            { name: "스타마트", addr: "경북 구미시 임은길 15", panoId: 1165804529, pov: { pan: 315.05, tilt: 4.10, zoom: -1 } },
+            { name: "로또복권4공단점", addr: "경북 구미시 첨단기업1로 18", panoId: 1166471935, pov: { pan: 125.32, tilt: 8.74, zoom: -1 } },
+            { name: "GMART", addr: "경북 구미시 구미중앙로 57-3", panoId: 1165801425, pov: { pan: 23.31, tilt: -1.02, zoom: 0 } },
+            { name: "로또로복권", addr: "전북 전주시 완산구 모악로 4729", panoId: 1172287937, pov: { pan: 304.48, tilt: 1.34, zoom: 0 } },
 
             { name: "Goodday복권전문점", addr: "경남 창원시 성산구 반지동 82-16", panoId: 1204230685, pov: { pan: 313.55, tilt: 4.31, zoom: -3 } },
             { name: "완월로또", addr: "경남 창원시 마산합포구 고운로 175 한미초록빌라 세븐일레븐 내", panoId: 1204767224, pov: { pan: 324.20, tilt: 9.81, zoom: -1 } },
@@ -5236,6 +5267,10 @@
                 actionType = arg5;
                 actionData = arg6;
                 shop = { lat, lng, n: shopName, a: address }; // Mock shop object
+            }
+
+            if (shop.roadview_msg) {
+                alert(shop.roadview_msg);
             }
 
             // Lazy Initialization
