Update Bugang & Chunhyang & Oncheonjang

--- a/index.html
+++ b/index.html
@@ -2634,6 +2634,10 @@
 
         // Premium Roadview POV Presets (User Verified 260210)
         const ROADVIEW_PRESETS = [
+            { name: "세븐일레븐부산온천장역점", addr: "부산 동래구 온천동 156-1 온천장역지하철 내", panoid: 1202578370, pov: { pan: 128.83, tilt: 3.01, zoom: -3 }, customMessage: "📍 매장은 온천장역 역사(지하) 내부에 있습니다." },
+            { name: "춘향로또", addr: "전북 남원시 동림로 102-1", panoid: 1205553870, pov: { pan: 55.63, tilt: 6.68, zoom: 1 } },
+            { name: "복권판매소", addr: "대구 서구 국채보상로 438", panoid: 1201562079, pov: { pan: 249.7, tilt: 7.83, zoom: 1 } },
+            { name: "부강 돈벼락", addr: "경남 양산시 물금로 41", panoId: 1204485832, pov: { pan: 41.35, tilt: 3.80, zoom: 2 } },
             { name: "부강 돈벼락", addr: "경남 양산시 물금로 41", panoId: 1204485832, pov: { pan: 41.35, tilt: 3.80, zoom: 2 } },
             { name: "송도하우스", addr: "전남 목포시 영산로 525 목포터미널 내", panoId: 1192393715, pov: { pan: 292.18, tilt: 3.38, zoom: -3 } },
             { name: "가자복권천국", addr: "전남 목포시 상동 878-4", panoId: 1192597080, pov: { pan: 53.56, tilt: 5.29, zoom: -1 } },
